--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,20 +66,22 @@
     <Compile Include="Assets/Scripts/Text/DialogueOnMap.cs" />
     <Compile Include="Assets/Scripts/Text/ConversationPart.cs" />
     <Compile Include="Assets/Scripts/Text/HouseInteraction.cs" />
+    <Compile Include="Assets/Scripts/ScriptableObjects/Vector3SO.cs" />
     <Compile Include="Assets/Scripts/Time Logic/TimeManager.cs" />
     <Compile Include="Assets/Scripts/Player/NemoStartPosition.cs" />
     <Compile Include="Assets/Scripts/Menu/OptionsMenu.cs" />
     <Compile Include="Assets/Scripts/Audio/AudioManager.cs" />
     <Compile Include="Assets/Scripts/Player/Controls.cs" />
     <Compile Include="Assets/Scripts/Text/ObjectInteraction.cs" />
+    <Compile Include="Assets/Scripts/ScriptableObjects/BoolSO.cs" />
     <Compile Include="Assets/Scripts/Menu/ThanksForPlaying.cs" />
     <Compile Include="Assets/Scripts/Text/TelephoneInteraction.cs" />
     <Compile Include="Assets/Scripts/Text/DialogueKaida.cs" />
-    <Compile Include="Assets/Scripts/Time Logic/Clock.cs" />
     <Compile Include="Assets/Scripts/Text/Thinking.cs" />
     <Compile Include="Assets/Scripts/ChangeScene.cs" />
     <Compile Include="Assets/Scripts/Text/Dialogue.cs" />
     <Compile Include="Assets/Scripts/Player/InputManager.cs" />
+    <Compile Include="Assets/Scripts/ScriptableObjects/FloatSO.cs" />
     <Compile Include="Assets/Scripts/Audio/AudioFile.cs" />
     <Compile Include="Assets/Scripts/Player/PlayerMovement.cs" />
   </ItemGroup>
